{
    "name": "ControlInput",
    "maps": [
        {
            "name": "InputStreamActionMap",
            "id": "b3d5f2cb-217a-4643-b9ee-9b61269c5b23",
            "actions": [
                {
                    "name": "aKeyLongPress",
                    "type": "Button",
                    "id": "69146433-f1a9-4e25-8a71-03121b70ac6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "dKeyLongPress",
                    "type": "Button",
                    "id": "1b6d6260-f56c-41e7-b483-f41fc5946f51",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "leftArrowLongPress",
                    "type": "Button",
                    "id": "a7d9f7d4-c665-44bc-a889-976d031c7899",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "rightArrowLongPress",
                    "type": "Button",
                    "id": "657e7bd3-e872-426f-83db-61d334323e6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "caf7b791-5a2b-488a-a839-2e99139c75e7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "aKeyLongPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3898d0da-a866-4d49-8841-4c51bcc9d4e6",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "leftArrowLongPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "964adb72-40b3-4a66-ad19-8354813e2d72",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "rightArrowLongPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87196a97-d0b2-453d-9d02-9c4364c75ff9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "dKeyLongPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}